samples/_failures_safe/1761397098_b7301a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_47e35547.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_47e35547.c:140:38: error: expected ‘)’ at end of input
  140 |             if (!matrix_set(result, j
      |                            ~         ^
      |                                      )
./samples/SAFE/__tmp_47e35547.c:140:18: error: too few arguments to function ‘matrix_set’
  140 |             if (!matrix_set(result, j
      |                  ^~~~~~~~~~
./samples/SAFE/__tmp_47e35547.c:40:5: note: declared here
   40 | int matrix_set(struct Matrix *m, int row, int col, double val) {
      |     ^~~~~~~~~~
./samples/SAFE/__tmp_47e35547.c:140:13: error: expected declaration or statement at end of input
  140 |             if (!matrix_set(result, j
      |             ^~
./samples/SAFE/__tmp_47e35547.c:140:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_47e35547.c:140:13: error: expected declaration or statement at end of input
